# python-claude-scaffold

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
.agent/: README.md
.agent/skills/: chain_of_thought.md  docs_writer.md
.agent/strategies/: workflow.md
.claude/: settings.json  settings.local.json
.claude/agents/: docs-updater.md
.claude/commands/: commit.md  docs-update.md  lint.md  review.md  test.md
.claude/hooks/: post-write-format.sh  session-start-banner.sh
.claude/prompts/: README.md
.claude/prompts/personas/: engineer.md  researcher.md  senior_engineer.md
.claude/prompts/skills/: debugging.md  docs_writer.md  self_critique.md
.claude/prompts/strategies/: research_workflow.md  tdd.md
.github/workflows/: ci.yml
docs/: architecture.md
docs/skills/: README.md
src/: __init__.py
src/agent/: __init__.py  loop.py  run.py  skill_loader.py
src/memory/: __init__.py  base.py  context_manager.py  long_term.py  short_term.py
src/scripts/: package.json
src/scripts/utils/: validate-env.mjs
src/skills/: __init__.py  base.py
src/skills/example/: SKILL.md  __init__.py  skill.py
src/tools/: __init__.py  base.py  definitions.py  handlers.py
tasks/: lessons.md  todo.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agent_integration.py
tests/unit/: test_agent_loop.py  test_memory.py  test_tools.py
